# de-zoomcamp

./: .gitignore  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup  upload-data.ipynb  variables.tf
.history/: .gitignore_20240116111727
02-week/: homework.md
_old/2025/: upload-data.ipynb
data_pipeline/: Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml
data_pipeline/03-week/: file_ingestion.py  file_ingestion_dlt.py  homework.sql
data_pipeline/04-week/: extract.py  howework.sql
data_pipeline/05-week/: README.md
data_pipeline/05-week/pipeline/: pipeline.yml
data_pipeline/05-week/pipeline/assets/ingestion/: payment_lookup.asset.yml  trips.py
data_pipeline/src/: data_pipeline.py
data_pipeline/taxi_rides_ny/: .gitignore  README.md  dbt_project.yml  load_seeds.py  profiles.example.yml
data_pipeline/taxi_rides_ny/models/staging/: sources.yml
data_pipeline/taxi_rides_ny/seeds/: seeds.yml
kestra/: docker-compose.yaml
